--- a/src/pages/signUpPage/signUpPage.css
+++ b/src/pages/signUpPage/signUpPage.css
@@ -20,7 +20,7 @@
   }
 
   .form-section-sign-up {
-    width: auto;
+    width: 20%;
     padding: 20px 70px;
     background-color: white;
     border-radius: 20px;
