modify the position of image

--- a/src/components/common/header/HeaderBar.css
+++ b/src/components/common/header/HeaderBar.css
@@ -8,7 +8,7 @@
 
 .logo {
   display: flex;
-  align-items: center; /* This ensures vertical centering of the logo image */
+  align-items: center; /* This ensures vertical centering of the logo images */
   margin-right: 24px;
 }
 
