Co-authored-by: Bart <1679243134@qq.com> Co-authored-by: bymax <40656194+bymaxchen@users.noreply.github.com> Co-authored-by: Julia Ekeblad <julia.ekeblad@gmail.com> Co-authored-by: Julia Ekeblad <74048004+juliaeke@users.noreply.github.com> Co-authored-by: xiaobo <gusxiaobch@gu.se> Co-authored-by: XiaoBo.Chen <xiaoboc@student.chalmers.se>

--- a/src/components/common/header/HeaderBar.css
+++ b/src/components/common/header/HeaderBar.css
@@ -27,9 +27,10 @@
 }
 
 .menu {
-  width: 350px;
+  width: 400px;
   display: flex;
   justify-content: flex-end;
+  padding-right: 20px;
 }
 
 .menu .ant-menu-item {
