--- a/src/pages/chatPage/chatPage.css
+++ b/src/pages/chatPage/chatPage.css
@@ -5,17 +5,22 @@
   padding-top: 7vh;
 }
 
-.chat-list {
-  width: 30%;
+.chat-sidebar {
+  width: 25%;
+  max-width: 400px;
   overflow-y: auto; /* Enables scrolling for the chat list */
   border-right: 1px solid #ccc; /* Visually separates the chat list from the chat window */
-  padding: 10px;
+  padding: 10px 20px;
+  background-color: #29537a;
 }
 
 .chat-window {
-  width: 70%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  align-self: right;
+  justify-self: right;
+  /* background-color: aqua; */
 }
 
 .messages-container {
@@ -36,14 +41,9 @@
   /* margin-right: 10px;  */
 }
 
-.chat-sidebar {
-  width: 240px;
-  border-right: 1px solid #ccc;
-  overflow-y: auto;
-}
-
 .chat-sidebar-name {
   margin-left: 10px;
+  color: #fff;
 }
 
 .message-bubble {
@@ -71,4 +71,8 @@
   display: flex;
   flex-direction: column;
   /* Keep existing styles */
+}
+
+#send-button{
+margin-left: 10px;
 }
