made scroll to bottom button
Co-Authored-By: TUKTUK77 <38136642+TUKTUK77@users.noreply.github.com>

--- a/src/components/common/header/HeaderBar.css
+++ b/src/components/common/header/HeaderBar.css
@@ -13,12 +13,12 @@
 .logo {
   display: flex;
   align-items: center; /* This ensures vertical centering of the logo images */
-  margin-right: 24px;
+  margin-right: 15px;
 }
 
 .logo img {
   padding-top: 20px;
-  height: 32px; /* Adjust the height as needed */
+  height: 5vh; /* Adjust the height as needed */
   width: auto; /* Adjust the width automatically based on the height to maintain aspect ratio */
 }
   
