--- a/src/pages/chatPage/chatPage.css
+++ b/src/pages/chatPage/chatPage.css
@@ -77,7 +77,7 @@
 
 /* If you add received messages */
 .received {
-  background-color: #ccc;
+  background-color: rgb(132, 132, 132);
   margin-right: auto; /* Aligns received messages to the left */
   border-bottom-left-radius: 0; /* Optional: adjusts the bubble shape for received messages */
 }
