--- a/src/components/common/header/HeaderBar.css
+++ b/src/components/common/header/HeaderBar.css
@@ -17,7 +17,7 @@
 }
 
 .logo img {
-  padding-top: 20px;
+  padding-top: 25px;
   height: 5vh; /* Adjust the height as needed */
   width: auto; /* Adjust the width automatically based on the height to maintain aspect ratio */
 }
@@ -27,7 +27,7 @@
 }
 
 .menu {
-  width: 400px;
+  width: 450px;
   display: flex;
   justify-content: flex-end;
   padding-right: 20px;
@@ -37,6 +37,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+svg{
+  height: 25px;
+  width: 25px;
+}
+
+span{
+  font-size: 11.5pt;
 }
 
 .ant-modal-footer{
